# search

./: README.md  bigbird_span_extraction.py  docker-compose.yml  file-struct.txt  index.py  pyproject.toml  requirements.txt  setup.py  test_parser.py
api/: routes.py
core/search/: basic_search.py  bigbird_qa_search.py
core/weaviate/: client.py  operations.py  schema.py  weaviate_calls_dev.py
processors/: doc_parser.py  media_parser.py  table_parser.py
sch_search.egg-info/: SOURCES.txt
sch_search/commands/: add_resource.py  commands_dev.py  del_resource.py  query.py
sch_search/parsers/: csv_parser.py  pdf_parser.py  video_parser.py
sch_search/weaviate/: weaviate_calls.py  weaviate_calls_dev.py
services/: query_service.py  resource_manager.py
tests/: sch_search_tests.py
tests/data/: data.csv
